--- a/environment.yml
+++ b/environment.yml
@@ -2,41 +2,421 @@ name: repositioning
 channels:
   - pyg
   - pytorch
+  - nvidia
   - conda-forge
   - defaults
-  - nvidia
 dependencies:
-  - wandb
-  - pytorch-lightning
-  - tensorboard
-  - biopython>=1.81
-  - black>=23.1.0
-  - bokeh>=3.0.3
-  - chembl_webresource_client>=0.10.8
-  - isort>=5.12.0
-  - jupyter>=1.0.0
-  - matplotlib>=3.7.0
-  - notebook>=6.5.2
-  - numpy>=1.24.0
-  - openbabel>=3.1.1
-  - pandas>=1.5.0
-  - pip>=23.0.1
-  - prolif>=1.1.0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - absl-py=1.4.0
+  - aiohttp=3.8.4
+  - aiosignal=1.3.1
+  - alsa-lib=1.2.8
+  - anyio=3.6.2
+  - appdirs=1.4.4
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - asttokens=2.2.1
+  - async-timeout=4.0.2
+  - attr=2.5.1
+  - attrs=23.1.0
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
+  - beautifulsoup4=4.12.2
+  - biopython=1.81
+  - black=23.3.0
+  - blas=2.116
+  - blas-devel=3.9.0
+  - bleach=6.0.0
+  - blinker=1.6.2
+  - blosc=1.21.3
+  - bokeh=3.1.1
+  - boost=1.74.0
+  - boost-cpp=1.74.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - c-ares=1.18.1
+  - ca-certificates=2023.5.7
+  - cached-property=1.5.2
+  - cached_property=1.5.2
+  - cachetools=5.3.0
+  - cairo=1.16.0
+  - cattrs=22.2.0
+  - certifi=2023.5.7
+  - cffi=1.15.1
+  - cftime=1.6.2
+  - charset-normalizer=2.1.1
+  - chembl_webresource_client=0.10.8
+  - click=8.1.3
+  - colorama=0.4.6
+  - comm=0.1.3
+  - contourpy=1.0.7
+  - cryptography=40.0.2
+  - cuda-cudart=11.7.99
+  - cuda-cupti=11.7.101
+  - cuda-libraries=11.7.1
+  - cuda-nvrtc=11.7.99
+  - cuda-nvtx=11.7.91
+  - cuda-runtime=11.7.1
+  - cuda-version=12.0
+  - curl=8.0.1
+  - cycler=0.11.0
+  - dbus=1.13.6
+  - debugpy=1.6.7
+  - decorator=5.1.1
+  - defusedxml=0.7.1
+  - docker-pycreds=0.4.0
+  - easydict=1.9
+  - entrypoints=0.4
+  - exceptiongroup=1.1.1
+  - executing=1.2.0
+  - expat=2.5.0
+  - fasteners=0.17.3
+  - fftw=3.3.10
+  - filelock=3.12.0
+  - flit-core=3.8.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.39.4
+  - freetype=2.12.1
+  - frozenlist=1.3.3
+  - fsspec=2023.5.0
+  - fuzzywuzzy=0.18.0
+  - gdown=4.7.1
+  - gettext=0.21.1
+  - gevent=22.10.2
+  - gitdb=4.0.10
+  - gitpython=3.1.31
+  - glew=2.1.0
+  - glib=2.76.2
+  - glib-tools=2.76.2
+  - glm=0.9.9.8
+  - google-auth=2.18.0
+  - google-auth-oauthlib=1.0.0
+  - graphite2=1.3.13
+  - greenlet=2.0.2
+  - grequests=0.6.0
+  - griddataformats=1.0.1
+  - grpcio=1.54.2
+  - gsd=2.8.1
+  - gst-plugins-base=1.22.0
+  - gstreamer=1.22.0
+  - gstreamer-orc=0.4.33
+  - h5py=3.8.0
+  - harfbuzz=6.0.0
+  - hdf4=4.2.15
+  - hdf5=1.14.0
+  - icu=70.1
+  - idna=3.4
+  - importlib-metadata=6.6.0
+  - importlib-resources=5.12.0
+  - importlib_metadata=6.6.0
+  - importlib_resources=5.12.0
+  - iniconfig=2.0.0
+  - ipykernel=6.23.0
+  - ipython=8.13.2
+  - ipython_genutils=0.2.0
+  - ipywidgets=8.0.6
+  - isort=5.12.0
+  - itsdangerous=2.1.2
+  - jack=1.9.22
+  - jedi=0.18.2
+  - jinja2=3.1.2
+  - joblib=1.2.0
+  - jsonschema=4.17.3
+  - jupyter=1.0.0
+  - jupyter_client=8.2.0
+  - jupyter_console=6.6.3
+  - jupyter_core=5.3.0
+  - jupyter_events=0.6.3
+  - jupyter_server=2.5.0
+  - jupyter_server_terminals=0.4.4
+  - jupyterlab_pygments=0.2.2
+  - jupyterlab_widgets=3.0.7
+  - keyutils=1.6.1
+  - kiwisolver=1.4.4
+  - krb5=1.20.1
+  - lame=3.100
+  - lcms2=2.15
+  - ld_impl_linux-64=2.40
+  - lerc=4.0.0
+  - levenshtein=0.21.0
+  - libabseil=20230125.0
+  - libaec=1.0.6
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcap=2.67
+  - libcblas=3.9.0
+  - libclang=15.0.7
+  - libclang13=15.0.7
+  - libcublas=11.10.3.66
+  - libcufft=10.7.2.124
+  - libcufile=1.5.0.59
+  - libcups=2.3.3
+  - libcurand=10.3.1.50
+  - libcurl=8.0.1
+  - libcusolver=11.4.0.1
+  - libcusparse=11.7.4.91
+  - libdb=6.2.32
+  - libdeflate=1.18
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libevent=2.1.10
+  - libexpat=2.5.0
+  - libffi=3.4.2
+  - libflac=1.4.2
+  - libgcc-ng=12.2.0
+  - libgcrypt=1.10.1
+  - libgfortran-ng=12.2.0
+  - libgfortran5=12.2.0
+  - libglib=2.76.2
+  - libglu=9.0.0
+  - libgpg-error=1.46
+  - libgrpc=1.54.2
+  - libhwloc=2.9.1
+  - libiconv=1.17
+  - libjpeg-turbo=2.1.5.1
+  - liblapack=3.9.0
+  - liblapacke=3.9.0
+  - libllvm15=15.0.7
+  - libnetcdf=4.9.2
+  - libnghttp2=1.52.0
+  - libnpp=11.7.4.75
+  - libnsl=2.0.0
+  - libnvjpeg=11.8.0.2
+  - libogg=1.3.4
+  - libopus=1.3.1
+  - libpng=1.6.39
+  - libpq=15.2
+  - libprotobuf=3.21.12
+  - libsndfile=1.2.0
+  - libsodium=1.0.18
+  - libsqlite=3.41.2
+  - libssh2=1.10.0
+  - libstdcxx-ng=12.2.0
+  - libsystemd0=253
+  - libtiff=4.5.0
+  - libtool=2.4.7
+  - libudev1=253
+  - libuuid=2.38.1
+  - libuv=1.44.2
+  - libvorbis=1.3.7
+  - libwebp-base=1.3.0
+  - libxcb=1.13
+  - libxkbcommon=1.5.0
+  - libxml2=2.10.3
+  - libzip=1.9.2
+  - libzlib=1.2.13
+  - lightning-utilities=0.8.0
+  - llvm-openmp=16.0.3
+  - lz4-c=1.9.4
+  - markdown=3.4.3
+  - markupsafe=2.1.2
+  - matplotlib=3.7.1
+  - matplotlib-base=3.7.1
+  - matplotlib-inline=0.1.6
+  - mdanalysis=2.4.3
+  - mistune=2.0.5
+  - mkl=2022.1.0
+  - mkl-devel=2022.1.0
+  - mkl-include=2022.1.0
+  - mmtf-python=1.1.3
+  - mpg123=1.31.3
+  - mrcfile=1.4.3
+  - msgpack-python=1.0.5
+  - multidict=6.0.4
+  - munkres=1.1.4
+  - mypy_extensions=1.0.0
+  - mysql-common=8.0.32
+  - mysql-libs=8.0.32
+  - nbclassic=1.0.0
+  - nbclient=0.7.4
+  - nbconvert=7.4.0
+  - nbconvert-core=7.4.0
+  - nbconvert-pandoc=7.4.0
+  - nbformat=5.8.0
+  - ncurses=6.3
+  - nest-asyncio=1.5.6
+  - netcdf4=1.6.3
+  - networkx=3.1
+  - notebook=6.5.4
+  - notebook-shim=0.2.3
+  - nspr=4.35
+  - nss=3.89
+  - numpy=1.24.3
+  - oauthlib=3.2.2
+  - openbabel=3.1.1
+  - openjpeg=2.5.0
+  - openssl=3.1.0
+  - packaging=23.1
+  - pandas=2.0.1
+  - pandoc=2.19.2
+  - pandocfilters=1.5.0
+  - parso=0.8.3
+  - pathspec=0.11.1
+  - pathtools=0.1.2
+  - patsy=0.5.3
+  - pbr=5.11.1
+  - pcre2=10.40
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=9.5.0
+  - pip=23.1.2
+  - pixman=0.40.0
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=3.5.0
+  - pluggy=1.0.0
+  - ply=3.11
+  - pmw=2.0.1
+  - pooch=1.7.0
+  - prolif=1.1.0
+  - prometheus_client=0.16.0
+  - prompt-toolkit=3.0.38
+  - prompt_toolkit=3.0.38
+  - protobuf=4.21.12
+  - psutil=5.9.5
+  - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pulseaudio=16.1
+  - pulseaudio-client=16.1
+  - pulseaudio-daemon=16.1
+  - pure_eval=0.2.2
   - py3dmol=2.0.1.post1
-  - pyg>=2.1.0,<3.0.0
-  - pymol-open-source>=2.5.0
-  - pypdb>=2.2,<3.0
-  - pytdc>=0.3.8
-  - pytest>=7.2.1
-  - python>=3.9.0,<3.10.0
-  - pytorch>=1.12.0,<2.0.0
+  - pyasn1=0.4.8
+  - pyasn1-modules=0.2.7
+  - pycairo=1.23.0
+  - pycparser=2.21
+  - pyedr=0.7.1
+  - pyg=2.3.0
+  - pygments=2.15.1
+  - pyjwt=2.7.0
+  - pymol-open-source=2.5.0
+  - pyopenssl=23.1.1
+  - pyparsing=3.0.9
+  - pypdb=2.2
+  - pyqt=5.15.7
+  - pyqt5-sip=12.11.0
+  - pyrsistent=0.19.3
+  - pysocks=1.7.1
+  - pytdc=0.3.8
+  - pytest=7.3.1
+  - python=3.9.16
+  - python-dateutil=2.8.2
+  - python-fastjsonschema=2.16.3
+  - python-json-logger=2.0.7
+  - python-levenshtein=0.21.0
+  - python-tzdata=2023.3
+  - python_abi=3.9
+  - pytng=0.3.0
+  - pytorch=1.13.1
+  - pytorch-cluster=1.6.1
   - pytorch-cuda=11.7
-  - pyyaml>=6.0
-  - qvina>=2.1.0
-  - rdkit>=2022.03.5
+  - pytorch-lightning=2.0.2
+  - pytorch-mutex=1.0
+  - pytorch-scatter=2.1.1
+  - pytorch-sparse=0.6.17
+  - pytorch-spline-conv=1.2.2
+  - pytz=2023.3
+  - pyu2f=0.1.5
+  - pyyaml=6.0
+  - pyzmq=25.0.2
+  - qt-main=5.15.8
+  - qtconsole=5.4.3
+  - qtconsole-base=5.4.3
+  - qtpy=2.3.1
+  - qvina=2.1.0
+  - rapidfuzz=2.15.1
+  - rdkit=2022.09.1
+  - re2=2023.02.02
+  - readline=8.2
+  - reportlab=3.6.13
+  - requests=2.29.0
+  - requests-cache=1.0.1
+  - requests-oauthlib=1.3.1
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - rsa=4.9
   - scikit-learn=1.2.1
-  - scipy>=1.10.1
-  - seaborn>=0.12.2
-  - smina>=2020.12.10
-  - tqdm>=4.64.1
-  - yaml>=0.2.5
+  - scipy=1.10.1
+  - seaborn=0.12.2
+  - seaborn-base=0.12.2
+  - send2trash=1.8.2
+  - sentry-sdk=1.21.1
+  - setproctitle=1.3.2
+  - setuptools=67.7.2
+  - sip=6.7.9
+  - six=1.16.0
+  - smina=2020.12.10
+  - smmap=3.0.5
+  - snappy=1.1.10
+  - sniffio=1.3.0
+  - soupsieve=2.3.2.post1
+  - sqlalchemy=2.0.13
+  - stack_data=0.6.2
+  - statsmodels=0.14.0
+  - tbb=2021.9.0
+  - tensorboard=2.13.0
+  - tensorboard-data-server=0.7.0
+  - terminado=0.17.1
+  - threadpoolctl=3.1.0
+  - tidynamics=1.0.0
+  - tinycss2=1.2.1
+  - tk=8.6.12
+  - toml=0.10.2
+  - tomli=2.0.1
+  - torchmetrics=0.11.4
+  - tornado=6.3
+  - tqdm=4.65.0
+  - traitlets=5.9.0
+  - typing-extensions=4.5.0
+  - typing_extensions=4.5.0
+  - tzdata=2023c
+  - ujson=5.7.0
+  - unicodedata2=15.0.0
+  - url-normalize=1.4.3
+  - urllib3=1.26.15
+  - wandb=0.15.2
+  - wcwidth=0.2.6
+  - webencodings=0.5.1
+  - websocket-client=1.5.1
+  - werkzeug=2.3.4
+  - wheel=0.40.0
+  - widgetsnbextension=4.0.7
+  - xcb-util=0.4.0
+  - xcb-util-image=0.4.0
+  - xcb-util-keysyms=0.4.0
+  - xcb-util-renderutil=0.3.9
+  - xcb-util-wm=0.4.1
+  - xkeyboard-config=2.38
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.8.4
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xf86vidmodeproto=2.3.1
+  - xorg-xproto=7.0.31
+  - xyzservices=2023.2.0
+  - xz=5.2.6
+  - yaml=0.2.5
+  - yarl=1.9.1
+  - zeromq=4.3.4
+  - zipp=3.15.0
+  - zlib=1.2.13
+  - zope.event=4.6
+  - zope.interface=6.0
+  - zstd=1.5.2
